--- a/tools/nuclei/tool.yaml
+++ b/tools/nuclei/tool.yaml
@@ -3,6 +3,7 @@ version: "3.0"
 description: "Template-based vulnerability scanner (v3.7.0) with 12,000+ templates covering CVEs (3,800+), XSS (1,300+), misconfigurations (900+), RCE (900+), technology detection (810+), LFI (820+), SQLi (540+), default logins (300+), auth bypasses (250+), SSRF (180+), and more. Supports HTTP, DNS, SSL/TLS, TCP, and headless browser protocols. Templates are community-maintained by ProjectDiscovery and auto-updated."
 image: "ghcr.io/silicon-works/mcp-tools-nuclei:latest"
 image_size_mb: 500
+timeout_seconds: 600
 
 capabilities:
   - vulnerability_scanning
