--- a/tools/payload/tool.yaml
+++ b/tools/payload/tool.yaml
@@ -3,6 +3,7 @@ version: "1.0"
 description: "Payload compiler and generator for reverse shells, SUID binaries, C compilation, and encoding. 6 methods: compile_c (GCC cross-compilation for x64/x86/ARM, static/stripped), suid_shell (setuid(0)+execve shell binary), revshell (one-liners in 8 languages: bash, python, nc, php, perl, ruby, powershell, socat with variants), list_shells (show all available reverse shell types), encode (base64/URL/double-URL/hex/unicode), decode. Does NOT require network — runs locally. For Metasploit msfvenom payloads, use metasploit generate_payload instead."
 image: "ghcr.io/silicon-works/mcp-tools-payload:latest"
 image_size_mb: 400
+timeout_seconds: 300
 
 capabilities:
   - binary_compilation
