--- a/tools/metasploit/tool.yaml
+++ b/tools/metasploit/tool.yaml
@@ -3,6 +3,7 @@ version: "6.4"
 description: "Metasploit Framework v6.4 with persistent sessions via msfrpcd (RPC daemon). 9 methods: generate_payload (msfvenom for executables and shellcode), search_modules (find exploits/auxiliary/post modules), check_vuln (scanner module verification), run_exploit (execute exploit with session creation), exec_command (one-shot command execution via exploit), list_sessions (active meterpreter/shell sessions), session_command (run commands in sessions), post_module (post-exploitation modules), handler (multi/handler for reverse shells). Sessions persist across tool calls. Runs as a service container — msfrpcd stays running between calls."
 image: "ghcr.io/silicon-works/mcp-tools-metasploit:latest"
 image_size_mb: 3000
+timeout_seconds: 600
 
 service: true
 service_name: "metasploit"
